# Multi-Agent-Worflow-to-Automate-Meet-Recordings

./: .env.example  .env.sample  .gitignore  README.md  mvp_jira_extractor.py  pyproject.toml
demo/: calendar_scheduler.py  jira_ticket_raiser.py  meeting.ics  sample1.txt  sample2.txt  visualizer.py  workflow_graph.mmd
frontend/: app.js  index.html  styles.css
src/: main.py
src/agents/: __init__.py  extractor_agent.py  jira_builder_agent.py  review_agent.py  summary_agent.py  transcriber_agent.py
src/api/: server.py
src/core/: models.py
src/graph/: __init__.py  state.py  workflow.py
src/services/: draft_review_service.py  drive_cron_worker.py
src/tools/: __init__.py  date_parser.py
src/utils/: logger.py
